# edog-studio

./: .coverage  .editorconfig  .edog-browser-launcher.cmd  .gitignore  .impeccable.md  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  edog-config.json  edog-logs.py  edog.cmd  edog.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
config/: edog-config.template.json  test-environment.json
data/: edog-templates.json  flt-type-manifest.json  framework-endpoints.json  retry-patterns.json  topic-vocabulary.json
docs/: DESIGN_SYSTEM.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_ARCHITECTURE.md  ROBUSTNESS_ARCHITECTURE.md  STARTUP_ARCHITECTURE.md  all-api-test-results.json  capacity-health-response.json  capacity-mgmt-api-results.json  capacity-portal-network-calls.json  chaos-scenarios.md  fabric-api-reference.md  fabric-api-test-results.json  hivemind-brainstorm-raw.md  notebook-api-test-results.json  notebook-editor-network-calls.json  remaining-api-test-results.json  test-env-api-results.json
hivemind/: ADR_GUIDE.md  AUTHORITY.md  CULTURE.md  DEBUGGING.md  ENGINEERING_STANDARDS.md  FEATURE_DEV_SOP.md  ONBOARDING.md  PERFORMANCE.md  QUALITY_BAR.md  QUALITY_ENFORCEMENT.md  README.md  RUNBOOKS.md  STYLE_GUIDE.md
scripts/: Setup-DevmodeResources.ps1  analyze-notebook-capture.py  build-html.py  capture-capacity-network.py  capture-notebook-network.py  dev-server.py  edog_signalr_bridge.py  feature_flags_catalog.py  feature_manager_cache.py  feature_overrides.py  fetch-vendor.py  file_watcher.py  flt_catalog.py  generate-error-codes.py  generate-error-sim-catalog.py  git_branches.py  insert_sections.py  pre-commit.py  probe-capacity.py  provision-test-env.py  qa_change_understanding.py  qa_cleanup.py  qa_codegraph_build.py  qa_contract_diff.py  qa_error_classify.py  qa_evidence.py  qa_execution_proof.py  qa_flag_gates.py  qa_head_match.py  qa_infra_spec.py  qa_invariants.py  qa_io.py  qa_mlv_convergence.py  qa_pr_diff.py  qa_present_check.py  qa_render.py  qa_resolve_change.py  qa_run_lock.py  qa_scenario_plan.py  qa_targets.py  (+30 more)
src/: edog-logs.html
tests/: conftest.py  test_additional_telemetry_interceptor.py  test_api_playground_catalog.py  test_bearer_cache.py  test_blocklist_extracted_component_check.py  test_blocklist_matches_wcl_prefix.py  test_blocklist_message_pattern_drop.py  test_build_integration.py  test_deploy_flow.py  test_dev_server_auth.py  test_dev_server_s2s_clientid.py  (+121 more)
(+844 files in other folders)
